# new-automated-tending

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  derivation.nix  imgui.ini  notes.org  shell.nix
.github/workflows/: main.yml
app/: CMakeLists.txt  action.cpp  action.hpp  action.inline.hpp  event.cpp  event.hpp  guard.cpp  guard.hpp  guard.inline.hpp  machine.cpp  machine.hpp  machine.inline.hpp  main.cpp  precompiled.hpp
cmake/: AFSM.cmake  Boost.cmake  CodeCoverage.cmake  Date.cmake  Documentation.cmake  Filesystem.cmake  FindImGui.cmake  Findpigpio.cmake  Fmt.cmake  Fruit.cmake  Glad.cmake  Misc.cmake  Spdlog.cmake  Toml.cmake  Warnings.cmake  Yaml.cmake
config/: config.toml  config.yaml
docs/: Doxyfile.in
driver/: CMakeLists.txt  integration.cpp  precompiled.hpp  shift_register.cpp  stepper.cpp  test_gui.cpp  ultrasonic.cpp
libalgo/: CMakeLists.txt  algo.hpp  instance_registry.cpp  instance_registry.hpp  instance_registry.inline.hpp  thread_pool.cpp  thread_pool.hpp  thread_pool.inline.hpp
libcore/: CMakeLists.txt  allocation.hpp  allocation.inline.hpp  common.cpp.in  common.hpp.in  config.cpp  config.hpp  core.hpp  filesystem.hpp  init.cpp  init.hpp  listener.cpp  listener.hpp  logger.cpp  logger.hpp  macros.cpp  macros.hpp  precompiled.hpp  state.cpp  state.hpp  test.cpp  test.hpp  timer.cpp  timer.hpp
libdevice/: A4988.hpp  A4988.inline.hpp  CMakeLists.txt  PCF8591.cpp  PCF8591.hpp  analog.cpp  analog.hpp  device.hpp  digital.hpp  digital.inline.hpp  float.cpp  float.hpp  gpio.cpp  gpio.hpp  identifier.cpp  identifier.hpp  init.cpp  init.hpp  pwm.cpp  pwm.hpp  shift_register.cpp  shift_register.hpp  stepper.cpp  stepper.hpp  stepper.inline.hpp  ultrasonic.cpp  ultrasonic.hpp
libdevice/analog/: PCF8591.cpp  PCF8591.hpp  analog.cpp  analog.hpp
libdevice/digital/: digital.cpp  digital.hpp  digital.inline.hpp  pwm.cpp  pwm.hpp
libdevice/stepper/: A4988.hpp  A4988.inline.hpp  stepper.cpp  stepper.hpp  stepper.inline.hpp
libgui/: CMakeLists.txt  cleaning-control-window.cpp  cleaning-control-window.hpp  cleaning-window.cpp  cleaning-window.hpp  fault-window.cpp  fault-window.hpp  gui.hpp  init.cpp  init.hpp  liquid-control-window.cpp  liquid-control-window.hpp  liquid-status-window.cpp  liquid-status-window.hpp  logger-window.hpp  logger-window.inline.hpp  manager.cpp  manager.hpp  manual-movement-window.cpp  manual-movement-window.hpp  metadata-window.cpp  metadata-window.hpp  movement-window.cpp  movement-window.hpp  plc-trigger-window.cpp  plc-trigger-window.hpp  speed-profile-window.cpp  speed-profile-window.hpp  status-window.cpp  status-window.hpp  system-info-window.cpp  system-info-window.hpp  util.cpp  util.hpp  widget.cpp  widget.hpp  window.cpp  window.hpp
libmachine/: CMakeLists.txt  action.cpp  action.hpp  action.inline.hpp  disinfectant-refilling-listener.cpp  disinfectant-refilling-listener.hpp  event.cpp  event.hpp  fault-listener.cpp  fault-listener.hpp  guard.cpp  guard.hpp  guard.inline.hpp  machine.hpp  restart-fault-listener.cpp  restart-fault-listener.hpp  state.cpp  state.hpp  state.inline.hpp  task-listener.cpp  task-listener.hpp  util.cpp  util.hpp  water-refilling-listener.cpp  water-refilling-listener.hpp
libmechanism/: CMakeLists.txt  init.cpp  init.hpp  liquid-refilling.cpp  liquid-refilling.hpp  mechanism.hpp  movement.cpp  movement.hpp  movement.inline.hpp
libutil/: CMakeLists.txt  boolean.hpp  filesystem.hpp  macros.cpp  macros.hpp  math.hpp  pair.hpp  time.hpp  timer.cpp  timer.hpp  util.hpp
